deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ironwaves-backend
  labels:
    app: ironwaves-backend
spec:
  type: ClusterIP
  selector:
    app: ironwaves-backend
  ports:
  - name: http
    port: 80
    targetPort: http
